= Milestone 1.0b1 =
* Fixed problem with file protocol and spaces.


= Milestone 1.0b1 =
* QTI files can be loaded from other domains (requires security settings)
* Added support for video and audio files

= Milestone 0.3 =
* New styles for choice to mark correct and wrong answers
* Added styles to mark correct and wrong answers in text interaction (gap and choice)
* New navigation buttons
* Implemented choice feedbacks