@@ -1,0 +1,7 @@
+version=1.0b2
+buildnumber=${tstamp}
+revision=${version}-${buildnumber}
+ivy.publish.resolver=public
+ivy.publish.ydp.resolver=eu.ydp.public
+ivy.publish.status=release
+ivy.settings.file=${user.home}/.ivy2/ivysettings.xml
