@@ -1,5 +1,6 @@
 = Milestone 1.0b1 =
 * Fixed problem with file protocol and spaces.
+* Support for IVY (player can be published as artefact.
 
 
 = Milestone 1.0b1 =
